--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\filip\\Anaconda3\\envs\\ML_exercises\\python.exe"
+    "python.pythonPath": "C:\\Users\\Filippo\\Anaconda3\\envs\\ML_exercises\\python.exe"
 }
